app/styles/components/c-control_panel.scss
@import '../settings';

.controlpanel {
  background: rgba($color-1, .95);
  box-shadow: 29px 0 4px 0 rgba($color-12, .5);
  height: $accordion-mobile-height;
  left: 0;
  position: absolute;
  top: $header-height-mobile;
  width: 100%;
  z-index: 102;

  &.-no-header {
    top: 0;
  }

  @media #{$mq-tablet} {
    background: transparent;
    height: auto;
    left: auto;
    max-height: calc(100vh - #{$panel-control-base-height + $offset-panel-control});
    max-width: 350px;
    overflow-y: auto;
    padding: 0 0 0 30px;
    right: 0;
    top: 0;

  }

  &.-is-report-visible {
    @media #{$mq-tablet} {
      max-height: calc(100vh - #{$panel-control-base-height + $offset-panel-control-with-report});
    }
  }

  > .bg-wrapper {
    background: rgba($color-1, .95);
    box-shadow: 0 0 4px 0 rgba($color-12, .5);
    height: 100%;
  }

  .resume-display {
    border-bottom: 1px solid rgba($color-7, .4);
    display: none;
    flex-direction: column;
    padding: 30px 56px 25px 25px;

    @media #{$mq-tablet} {
      display: flex;
    }

    .counter-description {
      color: rgba($color-3, .5);
      font-family: $font-family-1;
      font-size: $font-size-xs-small;
      font-weight: $font-weight-bold;
      line-height: 1;
      text-transform: uppercase;
    }

    .total {
      color: $color-4;
      font-family: $font-family-1;
      font-size: $font-size-s-medium;
      font-weight: $font-weight-bold;
    }

    > .categories-display {
      display: flex;
      justify-content: space-between;

      > .vessel-display,
      > .activity-display {
        display: flex;
        flex-direction: column;
      }
    }
  }

  .map-options {
    border-bottom: 1px solid $color-13;
    display: flex;
    height: 100%;
    justify-content: space-between;
    padding: 0 15px;

    @media #{$mq-tablet} {
      border-bottom: 0;
      flex-wrap: wrap;
      padding: 0;
    }

    > .accordion-item {
      align-items: center;
      color: $color-5;
      display: inline-flex;

      &:last-child {
        border-bottom: 0;
      }

      @media #{$mq-tablet} {
        border-bottom: 1px solid $color-7;
        display: block;
        padding: 10px;
        width: 100%;
      }

      .accordion-header {
        align-items: center;
        cursor: pointer;
        display: flex;
        flex-direction: column-reverse;
        justify-content: space-between;
        padding: 10px 15px;

        &.-search {
          flex-direction: column;

          .header-search-info {
            align-items: flex-end;
            display: flex;
            justify-content: space-between;
          }

          .header-search-info > .pinned-item-count {
            margin: 0 0 0 3px;
          }
        }

        @media #{$mq-tablet} {
          flex-direction: row;

          &:hover {
            background-color: rgba($color-3, .2);
            border-radius: 4px;
          }
        }

        .accordion-title {
          color: $color-4;
          font-family: $font-family-1;
          font-size: $font-size-xxs-small;
          font-weight: $font-weight-bold;
          margin: 5px 0 0;
          text-align: center;
          text-transform: uppercase;

          @media #{$mq-tablet} {
            font-size: $font-size-x-small;
            margin: 0;
            text-align: left;
          }
        }

        > .search-icon,
        > .basemap-icon,
        > .layers-icon,
        > .filters-icon {
          fill: $color-4;
          min-height: 18px;

          @media #{$mq-tablet} {
            min-height: none;
          }
        }
      }

      .content-accordion {
        height: calc(100% - 108px);
        overflow-y: auto;
        -webkit-overflow-scrolling: touch;
        padding: 15px 20px;

        @media #{$mq-tablet} {
          height: auto;
          margin: 10px 0 0;
          max-height: none;
          overflow-y: visible;
          padding: 0 15px;
        }
      }
    }

    > .layer-management {
      display: flex;
      justify-content: space-between;
      margin: 10px 0 0;

      > .layer-button {
        border: 1px solid $color-3;
        color: $color-3;
        cursor: pointer;
        font-size: $font-size-xxs-small;
        font-weight: $font-weight-bold;
        outline: none;
        padding: 5px;
        text-transform: uppercase;
        width: calc(50% - 2px);
      }
    }

    :global .react-sanfona-item-body {
      background: rgba($color-1, .95);
      left: 0;
      max-width: 0;
      position: absolute;
      top: $accordion-mobile-height;
      width: 100%;

      > .react-sanfona-item-body-wrapper {
        height: calc(100vh - #{$header-height-mobile + $accordion-mobile-height + $map-footer-height});

        @media #{$mq-tablet} {
          height: auto;
        }
      }

      @media #{$mq-tablet} {
        background: transparent;
        left: auto;
        max-width: none;
        position: initial;
        top: auto;
      }
    }

    :global .react-sanfona-item-expanded > .react-sanfona-item-body {
      max-width: none;
    }

    &.-no-footer {

      :global .react-sanfona-item-body {

        > .react-sanfona-item-body-wrapper {
          height: calc(100vh - #{$accordion-mobile-height + $header-height-mobile});

          @media #{$mq-tablet} {
            height: auto;
          }
        }
      }
    }
  }

  .pinned-item-count {
    color: rgba($color-3, .5);
    font-size: $font-size-xs-small;
    font-weight: $font-weight-bold;
    text-transform: uppercase;
  }
}

